# paperqa-mcp-server

./: LICENSE  README.md  pyproject.toml  server.py
src/paperqa_mcp_server/: __init__.py
